--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" }
   ],
   "routes": [
+    { "src": "/api/hello", "dest": "api/hello.js" },
     { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
