--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
   "builds": [{ "src": "api/*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "api/index.js" }]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/api/index.js" }
+  ]
 }
