--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "voltstore",
-  "version": "1.0.0",
-  "description": "VoltStore — Express + EJS on Vercel",
+  "name": "voltstore-vercel",
+  "version": "1.2.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "body-parser": "^1.20.3",
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "serverless-http": "^3.2.0"
+    "express": "^4.19.2",
+    "serverless-http": "^3.2.0",
+    "stripe": "^16.6.0",
+    "uuid": "^9.0.1"
   }
 }
