--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/*.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "api/index.js" }]
+  "functions": { "api/*.js": { "runtime": "nodejs20.x" } },
+  "routes": [
+    { "src": "/api/hello", "dest": "api/hello.js" },
+    { "src": "/.*", "dest": "api/hello.js" }
+  ]
 }
