--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/*.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "api/hello.js", "use": "@vercel/node" }],
   "routes": [
     { "src": "/api/hello", "dest": "api/hello.js" },
     { "src": "/.*", "dest": "api/hello.js" }
