--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "voltstore-vercel",
-  "version": "1.2.0",
+  "name": "voltstore",
+  "version": "1.0.0",
+  "private": true,
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cookie-session": "^2.0.0",
-    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "serverless-http": "^3.2.0",
-    "stripe": "^16.6.0",
-    "uuid": "^9.0.1"
+    "serverless-http": "^3.2.0"
   }
 }
